[package]
name = "float"
version = "0.1.2"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
description = "Lightweight wrappers around primitive floating point types."
repository = "https://github.com/peterhj/float"
documentation = "https://docs.rs/crate/float/"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
keywords = ["float", "ord", "cmp"]

[lib]
name = "float"
path = "src/lib.rs"
